# elixir_rust

./: .gitignore  README.md  WorkspaceLayout.md  mix.exs
.cursor/rules/: workspace-layout-header.mdc
.github/: pull_request_template.md
assets/: README.md
assets/_shared/: gen_atlas.py  gen_audio.py
assets/audio/: gen_audio.py
assets/sprites/: gen_atlas.py
config/: config.exs
docs/: ASSET_MANAGEMENT.md  ENGINE_ANALYSIS.md  PRESENTATION.md  PRIORITY_STEPS.md  REFACTOR_PROPOSAL.md  SETUP_ELIXIR.md  STEPS.md  STEPS_PERF.md  STEPS_PERFORMANCE.md  STEPS_QUALITY.md  WHY_ELIXIR.md  WHY_RAYON.md  docs_index.md
docs/01_setup/: SETUP_ELIXIR.md  SPEC.md  SPEC_ENGINE.md  SPEC_GAME_Survivor.md  SPEC_GAME_mini_shooter.md
docs/02_spec_design/: ENGINE_ANALYSIS.md  ENGINE_ANALYSIS_REVISED.md  ENGINE_STRENGTHS_WEAKNESSES.md  PROJECT_EVALUATION.md  PROJECT_EVALUATION_CANDID.md
docs/03_tech_decisions/: ADR_SHARED_MEMORY_THREAD_POLICY.md  ELIXIR_RUST_DIVISION.md  WHY_ELIXIR.md  WHY_Rustler.md  WHY_xtask.md
docs/04_roadmap/: NEXT_STEPS.md  PRIORITY_STEPS.md
docs/05_steps/: STEPS.md  STEPS_3D.md  STEPS_ALL.md  STEPS_BASE.md  STEPS_EXTENSION.md  STEPS_GENERALIZATION.md  STEPS_MAP_SAVE_MULTI_DEBUG.md  STEPS_PERF.md  STEPS_PERFORMANCE_ANALYSIS.md  STEPS_QUALITY.md  STEPS_RUST_LIB.md  STEPS_SLOT_COMPONENT.md
docs/06_system_design/: ARCHITECTURE.md  ARCHITECTURE_FILE_LEVEL_CURRENT.md  ARCHITECTURE_FILE_LEVEL_DIAGRAMS.md  ARCHITECTURE_IMPROVEMENT.md  ASSET_MANAGEMENT.md  ENGINE_API.md  EPIC_ONLINE_SERVICES.md  FOLDER_CONNECTIONS.md  GAME_INTERFACE.md  MULTIPLAYER_PHOENIX_CHANNELS.md  (+2 more)
lib/: engine.ex  game.ex
native/: Cargo.toml
native/game_native/: Cargo.toml
native/game_native/.cargo/: config.toml
native/game_native/benches/: ai_bench.rs  load_world_bench.rs
native/game_native/src/: audio.rs  constants.rs  lib.rs  lock_metrics.rs  main.rs  render_bridge.rs  render_snapshot.rs  render_thread.rs  weapon.rs
native/game_native/src/asset/: mod.rs
native/game_native/src/core/: boss.rs  constants.rs  enemy.rs  entity_params.rs  item.rs  mod.rs  util.rs  weapon.rs
native/game_native/src/core/physics/: mod.rs  obstacle_resolve.rs  rng.rs  separation.rs  spatial_hash.rs
native/game_native/src/game_logic/: chase_ai.rs  events.rs  mod.rs  physics_step.rs
native/game_native/src/game_logic/systems/: boss.rs  collision.rs  effects.rs  items.rs  leveling.rs  mod.rs  projectiles.rs  spawn.rs  weapons.rs
native/game_native/src/nif/: action_nif.rs  game_loop_nif.rs  load.rs  mod.rs  push_tick_nif.rs  read_nif.rs  render_nif.rs  save_nif.rs  util.rs  world_nif.rs
native/game_native/src/physics/: mod.rs  rng.rs  separation.rs  spatial_hash.rs
native/game_native/src/renderer/: mod.rs
native/game_native/src/renderer/shaders/: sprite.wgsl
native/game_native/src/world/: boss.rs  bullet.rs  enemy.rs  frame_event.rs  game_loop_control.rs  game_world.rs  mod.rs  particle.rs  player.rs
native/game_window/: Cargo.toml
native/game_window/src/: audio.rs  lib.rs  main.rs
native/game_window/src/asset/: mod.rs
native/game_window/src/renderer/: mod.rs
native/game_window/src/renderer/shaders/: sprite.wgsl
test/: boss_system_test.exs  level_system_test.exs  spawn_system_test.exs  test_helper.exs
umbrella/: mix.exs
(+721 files in other folders)
