[package]
name = "game_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_native"
crate-type = ["cdylib", "rlib"]  # cdylib: Rustler NIF 用, rlib: ベンチ・テスト用

[dependencies]
game_core = { path = "../game_core" }
rustler = "0.34"
rayon = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[profile.dev]
opt-level = 1  # デバッグビルドでも最低限の最適化

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ai_bench"
harness = false
