[package]
name = "game_window"
version = "0.1.0"
edition = "2021"
description = "スタンドアロン描画バイナリ（winit/wgpu）"

[[bin]]
name = "game_window"
path = "src/main.rs"

[dependencies]
game_core = { path = "../game_core" }
winit = "0.30.12"
wgpu = "24"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
log = "0.4"
env_logger = "0.11"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
rodio = { version = "0.21", default-features = false, features = ["playback", "wav", "vorbis"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
